--- a/express_data_preprocessing.ipynb
+++ b/express_data_preprocessing.ipynb
@@ -53,6 +53,7 @@
     "    for distance in distances:\n",
     "        with open(f\"data/express/{distance}/{gesture_name}\", \"rb\") as file:\n",
     "            temp = pickle.load(file)\n",
+    "            temp = temp[: 1500]\n",
     "            features += temp\n",
     "\n",
     "            for t in temp:\n",
@@ -152,10 +153,14 @@
    "outputs": [],
    "source": [
     "num_samples = len(norm_features)\n",
-    "percentage = 0.7\n",
+    "percentage = 0.8\n",
     "\n",
-    "train_features = norm_features\n",
-    "train_targets  = targets"
+    "train_features = norm_features[: int(percentage*num_samples)]\n",
+    "train_targets  = targets[: int(percentage*num_samples)]\n",
+    "\n",
+    "\n",
+    "val_features = norm_features[int(percentage*num_samples): ]\n",
+    "val_targets  = targets[int(percentage*num_samples): ]\n"
    ]
   },
   {
@@ -164,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = [train_features, train_targets]"
+    "train_data = [train_features, train_targets]\n",
+    "val_data   = [val_features, val_targets]"
    ]
   },
   {
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -216,16 +222,16 @@
          ],
          "xaxis": "x",
          "y": [
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503
+          3601,
+          3596,
+          3571,
+          3610,
+          3562,
+          3582,
+          3601,
+          3621,
+          3621,
+          3635
          ],
          "yaxis": "y"
         }
@@ -1086,6 +1092,7 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "nums = list()\n",
     "\n",
     "for i in range(10):\n",
@@ -1097,7 +1104,106 @@
     "\n",
     "    nums.append(temp)\n",
     "\n",
+    "df = pd.DataFrame(nums, index=[str(i) for i in range(1, 11)])\n",
+    "\n",
     "px.bar(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0\n",
+       "0  3601\n",
+       "1  3596\n",
+       "2  3571\n",
+       "3  3610\n",
+       "4  3562\n",
+       "5  3582\n",
+       "6  3601\n",
+       "7  3621\n",
+       "8  3621\n",
+       "9  3635"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(nums)"
    ]
   },
   {
@@ -1133,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1168,19 +1274,21 @@
           5,
           6,
           7,
-          8
+          8,
+          9
          ],
          "xaxis": "x",
          "y": [
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503,
-          4503
+          3562,
+          3562,
+          3562,
+          3562,
+          3562,
+          3562,
+          3562,
+          3562,
+          3562,
+          3562
          ],
          "yaxis": "y"
         }
@@ -2043,7 +2151,7 @@
    "source": [
     "balanced_nums = list()\n",
     "\n",
-    "for i in range(9):\n",
+    "for i in range(10):\n",
     "    temp = 0\n",
     "\n",
     "    for cl in balanced_train_targets:\n",
@@ -2078,7 +2186,10 @@
    "outputs": [],
    "source": [
     "with open(\"data/express/train_data\", \"wb\") as f:\n",
-    "    pickle.dump(balanced_train_data, f)"
+    "    pickle.dump(balanced_train_data, f)\n",
+    "\n",
+    "with open(\"data/express/val_data\", \"wb\") as f:\n",
+    "    pickle.dump(val_data, f)"
    ]
   }
  ],
