--- a/model_logisticregression.ipynb
+++ b/model_logisticregression.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
+    "    val_data = pickle.load(f)\n",
+    "\n",
+    "val_features = val_data[0]\n",
+    "val_targets  = val_data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +62,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training a baseline model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,25 +76,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "shaped_val_features   = reshape_to_train(unshaped=val_features)\n",
+    "shaped_test_features  = reshape_to_train(unshaped=test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimzing the Model over the validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "penalties = [\"none\", \"l2\"]\n",
+    "solvers = [\"newton-cg\", \"lbfgs\",\"sag\", \"saga\"]\n",
+    "\n",
+    "hps = dict()\n",
+    "i = 0\n",
+    "\n",
+    "for penalty in penalties:\n",
+    "    for solver in solvers:\n",
+    "        if solver == \"newton-cg\" and penalty in [\"none\", \"l2\"]:\n",
+    "            hps[i] = {\"penalty\": penalty, \"solver\": solver}\n",
+    "            i += 1\n",
+    "\n",
+    "        if solver == \"lbfgs\" and penalty in [\"none\", \"l2\"]:\n",
+    "            hps[i] = {\"penalty\": penalty, \"solver\": solver}\n",
+    "            i += 1\n",
+    "\n",
+    "        if solver == \"sag\" and penalty in [\"none\", \"l2\"]:\n",
+    "            hps[i] = {\"penalty\": penalty, \"solver\": solver}\n",
+    "            i += 1\n",
+    "\n",
+    "        if solver == \"saga\" and penalty in [\"none\", \"l2\", \"l1\",  \"elasticnet\"]:\n",
+    "            hps[i] = {\"penalty\": penalty, \"solver\": solver}\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
+      "\n",
+      "The max_iter was reached which means the coef_ did not converge\n",
+      "\n",
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
+      "\n",
+      "The max_iter was reached which means the coef_ did not converge\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  accuracy F1-score\n",
+      "0    96.89    96.84\n",
+      "1    96.44    96.33\n",
+      "2    97.78    89.22\n",
+      "3    96.44    96.23\n",
+      "4    97.33     88.5\n",
+      "5    97.78    89.23\n",
+      "6    98.67    98.34\n",
+      "7    97.33    88.56\n",
+      "{0: {'penalty': 'none', 'solver': 'newton-cg'}, 1: {'penalty': 'none', 'solver': 'lbfgs'}, 2: {'penalty': 'none', 'solver': 'sag'}, 3: {'penalty': 'none', 'solver': 'saga'}, 4: {'penalty': 'l2', 'solver': 'newton-cg'}, 5: {'penalty': 'l2', 'solver': 'lbfgs'}, 6: {'penalty': 'l2', 'solver': 'sag'}, 7: {'penalty': 'l2', 'solver': 'saga'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(columns=[\"accuracy\", \"F1-score\"], index=[i for i in range(len(hps))])\n",
+    "\n",
+    "for index, hp in hps.items():\n",
+    "    penalty = hp[\"penalty\"]\n",
+    "    solver = hp[\"solver\"]\n",
+    "    \n",
+    "    lr_model = LogisticRegression(penalty=penalty, solver=solver, multi_class=\"multinomial\", max_iter=5000)\n",
+    "\n",
+    "    lr_model.fit(X=shaped_train_features, y=train_targets)\n",
+    "\n",
+    "    predictions = lr_model.predict(shaped_val_features)\n",
+    "\n",
+    "    acc = accuracy_score(y_true=val_targets, y_pred=new)\n",
+    "    acc = round(acc*100, 2)\n",
+    "\n",
+    "    f1score = f1_score(y_true=val_targets, y_pred=new, average=\"macro\")\n",
+    "    f1score = round(f1score*100, 2)\n",
+    "\n",
+    "    df[\"accuracy\"].loc[index] = acc\n",
+    "    df[\"F1-score\"].loc[index] = f1score\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print(hps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training a baseline model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=1000, penalty='none')"
+       "LogisticRegression(max_iter=5000, multi_class='multinomial', solver='sag')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lr_model = LogisticRegressionCV(solver=\"saga\", cv=5, max_iter=1000)\n",
-    "lr_model = LogisticRegression(penalty=\"none\", max_iter=1000)\n",
-    "\n",
-    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "lr_model = LogisticRegression(penalty=\"l2\", solver=\"sag\", multi_class=\"multinomial\", max_iter=5000)\n",
     "\n",
     "lr_model.fit(X=shaped_train_features, y=train_targets)"
    ]
@@ -101,12 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaped_test_features = reshape_to_train(unshaped=test_features)\n",
-    "\n",
     "predictions = lr_model.predict(shaped_test_features)"
    ]
   },
@@ -119,30 +240,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 98.89%\n",
+      "The accuracy is 96.36%\n",
+      "The F1-Score is 87.62%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9926    0.9926    0.9926       136\n",
-      "           2     0.9854    0.9854    0.9854       137\n",
-      "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     0.9868    1.0000    0.9934       150\n",
-      "           5     0.9565    0.9821    0.9692       112\n",
-      "           6     0.9939    0.9880    0.9909       166\n",
-      "           7     1.0000    0.9925    0.9962       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9847    0.9699    0.9773       133\n",
+      "           0     1.0000    0.9907    0.9953       107\n",
+      "           1     0.9916    1.0000    0.9958       118\n",
+      "           2     0.9821    1.0000    0.9910       110\n",
+      "           3     0.9899    0.9899    0.9899        99\n",
+      "           4     1.0000    0.9922    0.9961       128\n",
+      "           5     0.9789    0.9789    0.9789        95\n",
+      "           6     1.0000    1.0000    1.0000       145\n",
+      "           7     1.0000    1.0000    1.0000       111\n",
+      "           8     0.9914    1.0000    0.9957       115\n",
+      "           9     1.0000    0.9794    0.9896        97\n",
       "\n",
-      "    accuracy                         0.9889      1350\n",
-      "   macro avg     0.9884    0.9885    0.9884      1350\n",
-      "weighted avg     0.9890    0.9889    0.9889      1350\n",
+      "    accuracy                         0.9938      1125\n",
+      "   macro avg     0.9934    0.9931    0.9932      1125\n",
+      "weighted avg     0.9938    0.9938    0.9938      1125\n",
       "\n"
      ]
     },
@@ -162,12 +284,60 @@
          "yaxis": "y",
          "z": [
           [
+           106,
+           0,
+           1,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           118,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           110,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           98,
+           0,
+           0,
+           0,
+           0,
+           1,
+           0
+          ],
+          [
+           0,
+           0,
+           1,
+           0,
            127,
            0,
-           1,
-           0,
-           0,
-           0,
            0,
            0,
            0,
@@ -175,11 +345,11 @@
           ],
           [
            0,
-           135,
            1,
            0,
+           1,
            0,
-           0,
+           93,
            0,
            0,
            0,
@@ -188,98 +358,50 @@
           [
            0,
            0,
-           135,
+           0,
+           0,
+           0,
+           0,
+           145,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           111,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           115,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
            0,
            2,
            0,
            0,
            0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           110,
-           0,
-           1,
-           0,
-           0,
-           1,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           150,
-           0,
-           0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           1,
-           0,
-           1,
-           0,
-           110,
-           0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           164,
-           0,
-           0,
-           2
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           1,
-           132,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           143,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           4,
-           0,
-           0,
-           0,
-           129
+           95
           ]
          ]
         }
@@ -1171,15 +1293,20 @@
     }
    ],
    "source": [
-    "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
-    "accuracy = round(acc, 4)\n",
+    "acc = accuracy_score(y_true=test_targets, y_pred=new)\n",
+    "accuracy = round(acc*100, 2)\n",
     "\n",
-    "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "print(f\"The accuracy is {accuracy}%\")\n",
+    "\n",
+    "f1 = f1_score(y_true=test_targets, y_pred=new, average=\"macro\")\n",
+    "f1 = round(f1*100, 2)\n",
+    "\n",
+    "print(f\"The F1-Score is {f1}%\")\n",
     "\n",
     "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
    ]
   },
   {
@@ -1191,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
