--- a/model_naive_bayes.ipynb
+++ b/model_naive_bayes.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
+    "    val_data = pickle.load(f)\n",
+    "\n",
+    "val_features = val_data[0]\n",
+    "val_targets  = val_data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +62,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training a baseline model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +76,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "shaped_val_features   = reshape_to_train(unshaped=val_features)\n",
+    "shaped_test_features  = reshape_to_train(unshaped=test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimzing the Model over the validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vars_smoothings = {i: pow(10, -i) for i in range(10)}\n",
+    "\n",
+    "hps = vars_smoothings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  accuracy F1-score\n",
+      "0    98.22     89.5\n",
+      "1      NaN      NaN\n",
+      "2      NaN      NaN\n",
+      "3      NaN      NaN\n",
+      "4      NaN      NaN\n",
+      "5      NaN      NaN\n",
+      "6      NaN      NaN\n",
+      "7      NaN      NaN\n",
+      "8      NaN      NaN\n",
+      "9      NaN      NaN\n",
+      "{0: 1, 1: 0.1, 2: 0.01, 3: 0.001, 4: 0.0001, 5: 1e-05, 6: 1e-06, 7: 1e-07, 8: 1e-08, 9: 1e-09}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(columns=[\"accuracy\", \"F1-score\"], index=[i for i in range(len(hps))])\n",
+    "\n",
+    "for index, hp in hps.items():\n",
+    "    nb_model = GaussianNB()\n",
+    "\n",
+    "    nb_model.fit(X=shaped_train_features, y=train_targets)\n",
+    "\n",
+    "    predictions = nb_model.predict(shaped_val_features)\n",
+    "\n",
+    "    acc = accuracy_score(y_true=val_targets, y_pred=predictions)\n",
+    "    acc = round(acc*100, 2)\n",
+    "\n",
+    "    f1score = f1_score(y_true=val_targets, y_pred=predictions, average=\"macro\")\n",
+    "    f1score = round(f1score*100, 2)\n",
+    "\n",
+    "    df[\"accuracy\"].loc[index] = acc\n",
+    "    df[\"F1-score\"].loc[index] = f1score\n",
+    "    break\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print(hps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training a baseline model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +170,13 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nb_model = GaussianNB()\n",
-    "\n",
-    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
     "nb_model.fit(X=shaped_train_features, y=train_targets)"
    ]
@@ -100,12 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaped_test_features = reshape_to_train(unshaped=test_features)\n",
-    "\n",
     "predictions = nb_model.predict(shaped_test_features)"
    ]
   },
@@ -118,9 +206,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 97.24%\n",
+      "The F1-Score is 88.41%\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     1.0000    0.9813    0.9906       107\n",
+      "           1     0.9829    0.9746    0.9787       118\n",
+      "           2     0.9558    0.9818    0.9686       110\n",
+      "           3     0.9700    0.9798    0.9749        99\n",
+      "           4     0.9919    0.9609    0.9762       128\n",
+      "           5     0.9375    0.9474    0.9424        95\n",
+      "           6     0.9792    0.9724    0.9758       145\n",
+      "           7     0.9640    0.9640    0.9640       111\n",
+      "           8     0.9580    0.9913    0.9744       115\n",
+      "           9     0.9895    0.9691    0.9792        97\n",
+      "          10     0.0000    0.0000    0.0000         0\n",
+      "\n",
+      "    accuracy                         0.9724      1125\n",
+      "   macro avg     0.8844    0.8839    0.8841      1125\n",
+      "weighted avg     0.9736    0.9724    0.9729      1125\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -137,8 +269,8 @@
          "yaxis": "y",
          "z": [
           [
-           127,
-           0,
+           105,
+           1,
            1,
            0,
            0,
@@ -146,24 +278,14 @@
            0,
            0,
            0,
-           0
-          ],
-          [
-           0,
-           136,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
            0,
            0
           ],
           [
            0,
+           115,
+           3,
            0,
-           137,
            0,
            0,
            0,
@@ -175,21 +297,36 @@
           [
            0,
            0,
+           108,
+           2,
            0,
-           110,
            0,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           97,
+           1,
            0,
            0,
            0,
            1,
-           1
+           0,
+           0
           ],
           [
            0,
            0,
            1,
            0,
-           149,
+           123,
+           4,
            0,
            0,
            0,
@@ -202,7 +339,8 @@
            0,
            1,
            0,
-           110,
+           90,
+           3,
            0,
            0,
            0,
@@ -215,7 +353,8 @@
            0,
            0,
            0,
-           166,
+           141,
+           4,
            0,
            0,
            0
@@ -228,7 +367,8 @@
            0,
            0,
            0,
-           133,
+           107,
+           4,
            0,
            0
           ],
@@ -241,7 +381,8 @@
            0,
            0,
            0,
-           143,
+           114,
+           1,
            0
           ],
           [
@@ -254,7 +395,21 @@
            0,
            0,
            0,
-           131
+           94,
+           1
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
           ]
          ]
         }
@@ -264,63 +419,39 @@
          "colorscale": [
           [
            0,
-           "#30123b"
+           "rgb(247,251,255)"
           ],
           [
-           0.07142857142857142,
-           "#4145ab"
+           0.125,
+           "rgb(222,235,247)"
           ],
           [
-           0.14285714285714285,
-           "#4675ed"
+           0.25,
+           "rgb(198,219,239)"
           ],
           [
-           0.21428571428571427,
-           "#39a2fc"
-          ],
-          [
-           0.2857142857142857,
-           "#1bcfd4"
-          ],
-          [
-           0.35714285714285715,
-           "#24eca6"
-          ],
-          [
-           0.42857142857142855,
-           "#61fc6c"
+           0.375,
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "#a4fc3b"
+           "rgb(107,174,214)"
           ],
           [
-           0.5714285714285714,
-           "#d1e834"
+           0.625,
+           "rgb(66,146,198)"
           ],
           [
-           0.6428571428571429,
-           "#f3c63a"
+           0.75,
+           "rgb(33,113,181)"
           ],
           [
-           0.7142857142857143,
-           "#fe9b2d"
-          ],
-          [
-           0.7857142857142857,
-           "#f36315"
-          ],
-          [
-           0.8571428571428571,
-           "#d93806"
-          ],
-          [
-           0.9285714285714286,
-           "#b11901"
+           0.875,
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "#7a0402"
+           "rgb(8,48,107)"
           ]
          ]
         },
@@ -1171,32 +1302,19 @@
    ],
    "source": [
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
-    "accuracy = round(acc, 4)\n",
+    "accuracy = round(acc*100, 2)\n",
     "\n",
-    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "print(f\"The accuracy is {accuracy}%\")\n",
     "\n",
-    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "f1 = f1_score(y_true=test_targets, y_pred=predictions, average=\"macro\")\n",
+    "f1 = round(f1*100, 2)\n",
+    "\n",
+    "print(f\"The F1-Score is {f1}%\")\n",
+    "\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.75 ms ± 1.15 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "nb_model.predict(shaped_test_features)"
+    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
    ]
   },
   {
@@ -1208,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
