--- a/model_xgboost.ipynb
+++ b/model_xgboost.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score\n",
     "from xgboost import XGBClassifier"
    ]
   },
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
+    "    val_data = pickle.load(f)\n",
+    "\n",
+    "val_features = val_data[0]\n",
+    "val_targets  = val_data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +62,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training a baseline model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +76,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "shaped_val_features   = reshape_to_train(unshaped=val_features)\n",
+    "shaped_test_features  = reshape_to_train(unshaped=test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimzing the Model over the validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimatores = [pow(2, i) for i in range(5, 11)]\n",
+    "learning_rates = [i/10 for i in range(2, 8)]\n",
+    "grows = [\"depthwise\", \"lossguide\"]\n",
+    "\n",
+    "hps = dict()\n",
+    "i = 0\n",
+    "\n",
+    "for estimator in estimatores:\n",
+    "    for lr in learning_rates:\n",
+    "        for gp in grows:\n",
+    "            hps[i] = {\"estimators\": estimator, \"lr\": lr, \"gp\": gp}\n",
+    "            i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   accuracy F1-score\n",
+      "0     96.44    96.16\n",
+      "1     96.89    88.94\n",
+      "2     97.78    97.61\n",
+      "3      96.0    87.15\n",
+      "4     98.22    97.72\n",
+      "..      ...      ...\n",
+      "67    97.78    89.19\n",
+      "68     96.0    87.34\n",
+      "69    97.33    88.42\n",
+      "70    98.22    89.39\n",
+      "71    98.67    98.47\n",
+      "\n",
+      "[72 rows x 2 columns]\n",
+      "{0: {'estimators': 32, 'lr': 0.2, 'gp': 'depthwise'}, 1: {'estimators': 32, 'lr': 0.2, 'gp': 'lossguide'}, 2: {'estimators': 32, 'lr': 0.3, 'gp': 'depthwise'}, 3: {'estimators': 32, 'lr': 0.3, 'gp': 'lossguide'}, 4: {'estimators': 32, 'lr': 0.4, 'gp': 'depthwise'}, 5: {'estimators': 32, 'lr': 0.4, 'gp': 'lossguide'}, 6: {'estimators': 32, 'lr': 0.5, 'gp': 'depthwise'}, 7: {'estimators': 32, 'lr': 0.5, 'gp': 'lossguide'}, 8: {'estimators': 32, 'lr': 0.6, 'gp': 'depthwise'}, 9: {'estimators': 32, 'lr': 0.6, 'gp': 'lossguide'}, 10: {'estimators': 32, 'lr': 0.7, 'gp': 'depthwise'}, 11: {'estimators': 32, 'lr': 0.7, 'gp': 'lossguide'}, 12: {'estimators': 64, 'lr': 0.2, 'gp': 'depthwise'}, 13: {'estimators': 64, 'lr': 0.2, 'gp': 'lossguide'}, 14: {'estimators': 64, 'lr': 0.3, 'gp': 'depthwise'}, 15: {'estimators': 64, 'lr': 0.3, 'gp': 'lossguide'}, 16: {'estimators': 64, 'lr': 0.4, 'gp': 'depthwise'}, 17: {'estimators': 64, 'lr': 0.4, 'gp': 'lossguide'}, 18: {'estimators': 64, 'lr': 0.5, 'gp': 'depthwise'}, 19: {'estimators': 64, 'lr': 0.5, 'gp': 'lossguide'}, 20: {'estimators': 64, 'lr': 0.6, 'gp': 'depthwise'}, 21: {'estimators': 64, 'lr': 0.6, 'gp': 'lossguide'}, 22: {'estimators': 64, 'lr': 0.7, 'gp': 'depthwise'}, 23: {'estimators': 64, 'lr': 0.7, 'gp': 'lossguide'}, 24: {'estimators': 128, 'lr': 0.2, 'gp': 'depthwise'}, 25: {'estimators': 128, 'lr': 0.2, 'gp': 'lossguide'}, 26: {'estimators': 128, 'lr': 0.3, 'gp': 'depthwise'}, 27: {'estimators': 128, 'lr': 0.3, 'gp': 'lossguide'}, 28: {'estimators': 128, 'lr': 0.4, 'gp': 'depthwise'}, 29: {'estimators': 128, 'lr': 0.4, 'gp': 'lossguide'}, 30: {'estimators': 128, 'lr': 0.5, 'gp': 'depthwise'}, 31: {'estimators': 128, 'lr': 0.5, 'gp': 'lossguide'}, 32: {'estimators': 128, 'lr': 0.6, 'gp': 'depthwise'}, 33: {'estimators': 128, 'lr': 0.6, 'gp': 'lossguide'}, 34: {'estimators': 128, 'lr': 0.7, 'gp': 'depthwise'}, 35: {'estimators': 128, 'lr': 0.7, 'gp': 'lossguide'}, 36: {'estimators': 256, 'lr': 0.2, 'gp': 'depthwise'}, 37: {'estimators': 256, 'lr': 0.2, 'gp': 'lossguide'}, 38: {'estimators': 256, 'lr': 0.3, 'gp': 'depthwise'}, 39: {'estimators': 256, 'lr': 0.3, 'gp': 'lossguide'}, 40: {'estimators': 256, 'lr': 0.4, 'gp': 'depthwise'}, 41: {'estimators': 256, 'lr': 0.4, 'gp': 'lossguide'}, 42: {'estimators': 256, 'lr': 0.5, 'gp': 'depthwise'}, 43: {'estimators': 256, 'lr': 0.5, 'gp': 'lossguide'}, 44: {'estimators': 256, 'lr': 0.6, 'gp': 'depthwise'}, 45: {'estimators': 256, 'lr': 0.6, 'gp': 'lossguide'}, 46: {'estimators': 256, 'lr': 0.7, 'gp': 'depthwise'}, 47: {'estimators': 256, 'lr': 0.7, 'gp': 'lossguide'}, 48: {'estimators': 512, 'lr': 0.2, 'gp': 'depthwise'}, 49: {'estimators': 512, 'lr': 0.2, 'gp': 'lossguide'}, 50: {'estimators': 512, 'lr': 0.3, 'gp': 'depthwise'}, 51: {'estimators': 512, 'lr': 0.3, 'gp': 'lossguide'}, 52: {'estimators': 512, 'lr': 0.4, 'gp': 'depthwise'}, 53: {'estimators': 512, 'lr': 0.4, 'gp': 'lossguide'}, 54: {'estimators': 512, 'lr': 0.5, 'gp': 'depthwise'}, 55: {'estimators': 512, 'lr': 0.5, 'gp': 'lossguide'}, 56: {'estimators': 512, 'lr': 0.6, 'gp': 'depthwise'}, 57: {'estimators': 512, 'lr': 0.6, 'gp': 'lossguide'}, 58: {'estimators': 512, 'lr': 0.7, 'gp': 'depthwise'}, 59: {'estimators': 512, 'lr': 0.7, 'gp': 'lossguide'}, 60: {'estimators': 1024, 'lr': 0.2, 'gp': 'depthwise'}, 61: {'estimators': 1024, 'lr': 0.2, 'gp': 'lossguide'}, 62: {'estimators': 1024, 'lr': 0.3, 'gp': 'depthwise'}, 63: {'estimators': 1024, 'lr': 0.3, 'gp': 'lossguide'}, 64: {'estimators': 1024, 'lr': 0.4, 'gp': 'depthwise'}, 65: {'estimators': 1024, 'lr': 0.4, 'gp': 'lossguide'}, 66: {'estimators': 1024, 'lr': 0.5, 'gp': 'depthwise'}, 67: {'estimators': 1024, 'lr': 0.5, 'gp': 'lossguide'}, 68: {'estimators': 1024, 'lr': 0.6, 'gp': 'depthwise'}, 69: {'estimators': 1024, 'lr': 0.6, 'gp': 'lossguide'}, 70: {'estimators': 1024, 'lr': 0.7, 'gp': 'depthwise'}, 71: {'estimators': 1024, 'lr': 0.7, 'gp': 'lossguide'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(columns=[\"accuracy\", \"F1-score\"], index=[i for i in range(len(hps))])\n",
+    "\n",
+    "for index, hp in hps.items():    \n",
+    "    lr_model = XGBClassifier(objective=\"multi:softprob\", learning_rate=hp[\"lr\"], n_estimators=hp[\"estimators\"], grow_policy=hp[\"gp\"])\n",
+    "\n",
+    "    lr_model.fit(X=shaped_train_features, y=train_targets)\n",
+    "\n",
+    "    predictions = lr_model.predict(shaped_val_features)\n",
+    "\n",
+    "    acc = accuracy_score(y_true=val_targets, y_pred=new)\n",
+    "    acc = round(acc*100, 2)\n",
+    "\n",
+    "    f1score = f1_score(y_true=val_targets, y_pred=new, average=\"macro\")\n",
+    "    f1score = round(f1score*100, 2)\n",
+    "\n",
+    "    df[\"accuracy\"].loc[index] = acc\n",
+    "    df[\"F1-score\"].loc[index] = f1score\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print(hps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>F1-score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>99.56</td>\n",
+       "      <td>99.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>98.67</td>\n",
+       "      <td>98.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>98.67</td>\n",
+       "      <td>98.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>98.67</td>\n",
+       "      <td>98.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>98.67</td>\n",
+       "      <td>98.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>87.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>87.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>87.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>95.56</td>\n",
+       "      <td>86.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>95.56</td>\n",
+       "      <td>86.59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accuracy F1-score\n",
+       "26    99.56    99.46\n",
+       "24    98.67    98.59\n",
+       "5     98.67    98.54\n",
+       "64    98.67     98.5\n",
+       "42    98.67     98.5\n",
+       "..      ...      ...\n",
+       "3      96.0    87.15\n",
+       "18     96.0    87.05\n",
+       "61     96.0    87.01\n",
+       "52    95.56    86.87\n",
+       "57    95.56    86.59\n",
+       "\n",
+       "[72 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by=\"F1-score\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'estimators': 128, 'lr': 0.3, 'gp': 'depthwise'}\n",
+      "{'estimators': 128, 'lr': 0.2, 'gp': 'depthwise'}\n",
+      "{'estimators': 32, 'lr': 0.4, 'gp': 'lossguide'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hps[26])\n",
+    "print(hps[24])\n",
+    "print(hps[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training a baseline model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -80,22 +321,20 @@
        "              early_stopping_rounds=None, enable_categorical=False,\n",
        "              eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
        "              importance_type=None, interaction_constraints='',\n",
-       "              learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
+       "              learning_rate=0.3, max_bin=256, max_cat_to_onehot=4,\n",
        "              max_delta_step=0, max_depth=6, max_leaves=0, min_child_weight=1,\n",
-       "              missing=nan, monotone_constraints='()', n_estimators=100,\n",
+       "              missing=nan, monotone_constraints='()', n_estimators=128,\n",
        "              n_jobs=0, num_parallel_tree=1, objective='multi:softprob',\n",
        "              predictor='auto', random_state=0, reg_alpha=0, ...)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgb_model = XGBClassifier(objective=\"multi:softprob\")\n",
-    "\n",
-    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "xgb_model = XGBClassifier(objective=\"multi:softprob\", learning_rate=0.3, n_estimators=128, grow_policy=\"depthwise\")\n",
     "\n",
     "xgb_model.fit(shaped_train_features, train_targets)"
    ]
@@ -109,12 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaped_test_features = reshape_to_train(unshaped=test_features)\n",
-    "\n",
     "predictions = xgb_model.predict(shaped_test_features)"
    ]
   },
@@ -127,9 +364,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 99.29%\n",
+      "The F1-Score is 99.25%\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     1.0000    0.9813    0.9906       107\n",
+      "           1     0.9916    1.0000    0.9958       118\n",
+      "           2     0.9821    1.0000    0.9910       110\n",
+      "           3     0.9800    0.9899    0.9849        99\n",
+      "           4     1.0000    0.9922    0.9961       128\n",
+      "           5     0.9894    0.9789    0.9841        95\n",
+      "           6     0.9932    1.0000    0.9966       145\n",
+      "           7     1.0000    0.9910    0.9955       111\n",
+      "           8     0.9914    1.0000    0.9957       115\n",
+      "           9     1.0000    0.9897    0.9948        97\n",
+      "\n",
+      "    accuracy                         0.9929      1125\n",
+      "   macro avg     0.9928    0.9923    0.9925      1125\n",
+      "weighted avg     0.9930    0.9929    0.9929      1125\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -146,7 +408,7 @@
          "yaxis": "y",
          "z": [
           [
-           126,
+           105,
            0,
            1,
            0,
@@ -159,7 +421,7 @@
           ],
           [
            0,
-           136,
+           118,
            0,
            0,
            0,
@@ -170,19 +432,6 @@
            0
           ],
           [
-           0,
-           0,
-           137,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
            0,
            0,
            110,
@@ -190,15 +439,28 @@
            0,
            0,
            0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           98,
+           0,
+           0,
+           0,
+           0,
            1,
-           1
+           0
           ],
           [
            0,
            0,
            1,
            0,
-           149,
+           127,
            0,
            0,
            0,
@@ -210,35 +472,35 @@
            1,
            0,
            1,
+           0,
+           93,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           145,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           1,
+           0,
+           0,
            0,
            110,
            0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           166,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           1,
-           0,
-           0,
-           0,
-           132,
-           0,
            0
           ],
           [
@@ -250,7 +512,7 @@
            0,
            0,
            0,
-           143,
+           115,
            0
           ],
           [
@@ -263,7 +525,7 @@
            0,
            0,
            0,
-           132
+           96
           ]
          ]
         }
@@ -1180,11 +1442,16 @@
    ],
    "source": [
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
-    "accuracy = round(acc, 4)\n",
+    "accuracy = round(acc*100, 2)\n",
     "\n",
-    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "print(f\"The accuracy is {accuracy}%\")\n",
     "\n",
-    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "f1 = f1_score(y_true=test_targets, y_pred=predictions, average=\"macro\")\n",
+    "f1 = round(f1*100, 2)\n",
+    "\n",
+    "print(f\"The F1-Score is {f1}%\")\n",
+    "\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
     "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
@@ -1199,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
