--- a/randomized_data_preprocessing.ipynb
+++ b/randomized_data_preprocessing.ipynb
@@ -160,8 +160,11 @@
     "train_features = norm_features[: int(percentage*num_samples)]\n",
     "train_targets  = targets[: int(percentage*num_samples)]\n",
     "\n",
-    "test_features = norm_features[int(percentage*num_samples): ]\n",
-    "test_targets  = targets[int(percentage*num_samples): ]\n"
+    "val_features = norm_features[int(percentage*num_samples): int(0.75*num_samples)]\n",
+    "val_targets  = targets[int(percentage*num_samples): int(0.75*num_samples)]\n",
+    "\n",
+    "test_features = norm_features[int(0.75*num_samples): ]\n",
+    "test_targets  = targets[int(0.75*num_samples): ]\n"
    ]
   },
   {
@@ -171,6 +174,7 @@
    "outputs": [],
    "source": [
     "train_data = [train_features, train_targets]\n",
+    "val_data   = [val_features, val_targets]\n",
     "test_data  = [test_features, test_targets]"
    ]
   },
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1175,10 +1179,12 @@
           5,
           6,
           7,
-          8
+          8,
+          9
          ],
          "xaxis": "x",
          "y": [
+          284,
           284,
           284,
           284,
@@ -2050,7 +2056,7 @@
    "source": [
     "balanced_nums = list()\n",
     "\n",
-    "for i in range(9):\n",
+    "for i in range(10):\n",
     "    temp = 0\n",
     "\n",
     "    for cl in balanced_train_targets:\n",
@@ -2127,6 +2133,9 @@
     "with open(\"data/randomized/train_data\", \"wb\") as f:\n",
     "    pickle.dump(balanced_train_data, f)\n",
     "\n",
+    "with open(\"data/randomized/val_data\", \"wb\") as f:\n",
+    "    pickle.dump(val_data, f)\n",
+    "\n",
     "with open(\"data/randomized/test_data\", \"wb\") as f:\n",
     "    pickle.dump(test_data, f)"
    ]
@@ -2134,7 +2143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -2153,7 +2162,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
