--- a/model_randomforest.ipynb
+++ b/model_randomforest.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +33,19 @@
     "\n",
     "train_features = train_data[0]\n",
     "train_targets  = train_data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
+    "    val_data = pickle.load(f)\n",
+    "\n",
+    "val_features = val_data[0]\n",
+    "val_targets  = val_data[1]"
    ]
   },
   {
@@ -45,13 +59,6 @@
     "\n",
     "test_features = test_data[0]\n",
     "test_targets  = test_data[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training the model"
    ]
   },
   {
@@ -71,22 +78,156 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "shaped_val_features   = reshape_to_train(unshaped=val_features)\n",
+    "shaped_test_features  = reshape_to_train(unshaped=test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimzing the Model over the validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimatores = [pow(2, i) for i in range(8)]\n",
+    "criterions = [\"gini\", \"entropy\"]\n",
+    "boots = [True, False]\n",
+    "\n",
+    "hps = dict()\n",
+    "i = 0\n",
+    "\n",
+    "for estimator in estimatores:\n",
+    "    for criterion in criterions:\n",
+    "        for boot in boots:\n",
+    "            hps[i] = {\"estimators\": estimator, \"criterion\": criterion, \"bootstrap\": boot}\n",
+    "            i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   accuracy F1-score\n",
+      "0     95.11     95.1\n",
+      "1     98.67     89.9\n",
+      "2     97.78    97.75\n",
+      "3     96.44    87.74\n",
+      "4     95.11    86.48\n",
+      "5     98.22    97.75\n",
+      "6     96.89    88.43\n",
+      "7     94.67    85.89\n",
+      "8     96.89    87.81\n",
+      "9     96.44    87.52\n",
+      "10    98.22     89.4\n",
+      "11    97.33    89.37\n",
+      "12    98.67     89.7\n",
+      "13     96.0    88.28\n",
+      "14    97.78    89.19\n",
+      "15    96.44    96.09\n",
+      "16    98.22    98.06\n",
+      "17    97.78     97.9\n",
+      "18     96.0    87.32\n",
+      "19    97.78    88.93\n",
+      "20    96.44     87.4\n",
+      "21    98.22    89.19\n",
+      "22    98.22    97.97\n",
+      "23    97.78    88.81\n",
+      "24    95.56    87.58\n",
+      "25    97.33    97.03\n",
+      "26    98.67    98.44\n",
+      "27    97.78     88.9\n",
+      "28    96.89    88.41\n",
+      "29    96.44    87.48\n",
+      "30    97.78    89.02\n",
+      "31     96.0    87.02\n",
+      "{0: {'estimators': 1, 'criterion': 'gini', 'bootstrap': True}, 1: {'estimators': 1, 'criterion': 'gini', 'bootstrap': False}, 2: {'estimators': 1, 'criterion': 'entropy', 'bootstrap': True}, 3: {'estimators': 1, 'criterion': 'entropy', 'bootstrap': False}, 4: {'estimators': 2, 'criterion': 'gini', 'bootstrap': True}, 5: {'estimators': 2, 'criterion': 'gini', 'bootstrap': False}, 6: {'estimators': 2, 'criterion': 'entropy', 'bootstrap': True}, 7: {'estimators': 2, 'criterion': 'entropy', 'bootstrap': False}, 8: {'estimators': 4, 'criterion': 'gini', 'bootstrap': True}, 9: {'estimators': 4, 'criterion': 'gini', 'bootstrap': False}, 10: {'estimators': 4, 'criterion': 'entropy', 'bootstrap': True}, 11: {'estimators': 4, 'criterion': 'entropy', 'bootstrap': False}, 12: {'estimators': 8, 'criterion': 'gini', 'bootstrap': True}, 13: {'estimators': 8, 'criterion': 'gini', 'bootstrap': False}, 14: {'estimators': 8, 'criterion': 'entropy', 'bootstrap': True}, 15: {'estimators': 8, 'criterion': 'entropy', 'bootstrap': False}, 16: {'estimators': 16, 'criterion': 'gini', 'bootstrap': True}, 17: {'estimators': 16, 'criterion': 'gini', 'bootstrap': False}, 18: {'estimators': 16, 'criterion': 'entropy', 'bootstrap': True}, 19: {'estimators': 16, 'criterion': 'entropy', 'bootstrap': False}, 20: {'estimators': 32, 'criterion': 'gini', 'bootstrap': True}, 21: {'estimators': 32, 'criterion': 'gini', 'bootstrap': False}, 22: {'estimators': 32, 'criterion': 'entropy', 'bootstrap': True}, 23: {'estimators': 32, 'criterion': 'entropy', 'bootstrap': False}, 24: {'estimators': 64, 'criterion': 'gini', 'bootstrap': True}, 25: {'estimators': 64, 'criterion': 'gini', 'bootstrap': False}, 26: {'estimators': 64, 'criterion': 'entropy', 'bootstrap': True}, 27: {'estimators': 64, 'criterion': 'entropy', 'bootstrap': False}, 28: {'estimators': 128, 'criterion': 'gini', 'bootstrap': True}, 29: {'estimators': 128, 'criterion': 'gini', 'bootstrap': False}, 30: {'estimators': 128, 'criterion': 'entropy', 'bootstrap': True}, 31: {'estimators': 128, 'criterion': 'entropy', 'bootstrap': False}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(columns=[\"accuracy\", \"F1-score\"], index=[i for i in range(len(hps))])\n",
+    "\n",
+    "for index, hp in hps.items():    \n",
+    "    lr_model = RandomForestClassifier(bootstrap=hp[\"bootstrap\"], n_estimators=hp[\"estimators\"], criterion=hp[\"criterion\"])\n",
+    "\n",
+    "    lr_model.fit(X=shaped_train_features, y=train_targets)\n",
+    "\n",
+    "    predictions = lr_model.predict(shaped_val_features)\n",
+    "    \n",
+    "    acc = accuracy_score(y_true=val_targets, y_pred=predictions)\n",
+    "    acc = round(acc*100, 2)\n",
+    "\n",
+    "    f1score = f1_score(y_true=val_targets, y_pred=predictions, average=\"macro\")\n",
+    "    f1score = round(f1score*100, 2)\n",
+    "\n",
+    "    df[\"accuracy\"].loc[index] = acc\n",
+    "    df[\"F1-score\"].loc[index] = f1score\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "print(hps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11964/636374034.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"F1-score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.sort_values(by=\"F1-score\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=False)"
+       "RandomForestClassifier(criterion='entropy', n_estimators=64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf_model = RandomForestClassifier(bootstrap=False)\n",
-    "\n",
-    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "rf_model = RandomForestClassifier(bootstrap=True, n_estimators=64, criterion=\"entropy\")\n",
     "\n",
     "rf_model.fit(X=shaped_train_features, y=np.array(train_targets))"
    ]
@@ -100,12 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaped_test_features = reshape_to_train(unshaped=test_features)\n",
-    "\n",
     "predictions = rf_model.predict(shaped_test_features)"
    ]
   },
@@ -118,9 +257,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 97.69%\n",
+      "The F1-Score is 88.88%\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     1.0000    0.9439    0.9712       107\n",
+      "           1     0.9746    0.9746    0.9746       118\n",
+      "           2     0.9732    0.9909    0.9820       110\n",
+      "           3     0.9897    0.9697    0.9796        99\n",
+      "           4     0.9845    0.9922    0.9883       128\n",
+      "           5     0.9583    0.9684    0.9634        95\n",
+      "           6     0.9930    0.9793    0.9861       145\n",
+      "           7     0.9910    0.9910    0.9910       111\n",
+      "           8     0.9492    0.9739    0.9614       115\n",
+      "           9     0.9794    0.9794    0.9794        97\n",
+      "          10     0.0000    0.0000    0.0000         0\n",
+      "\n",
+      "    accuracy                         0.9769      1125\n",
+      "   macro avg     0.8903    0.8876    0.8888      1125\n",
+      "weighted avg     0.9798    0.9769    0.9782      1125\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "c:\\Users\\Joao\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-T53X9OZe-py3.8\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning:\n",
+      "\n",
+      "Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -137,59 +320,38 @@
          "yaxis": "y",
          "z": [
           [
-           126,
+           101,
+           0,
+           2,
            0,
            1,
            0,
            0,
            0,
-           0,
-           0,
            1,
-           0
+           0,
+           2
           ],
           [
            0,
-           136,
+           115,
            0,
            0,
            0,
            0,
            0,
            0,
+           2,
            0,
-           0
-          ],
-          [
-           0,
-           0,
-           137,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           110,
-           0,
-           0,
-           0,
-           0,
-           1,
            1
           ],
           [
            0,
            0,
+           109,
            0,
            0,
-           150,
+           1,
            0,
            0,
            0,
@@ -198,63 +360,107 @@
           ],
           [
            0,
+           0,
+           0,
+           96,
+           0,
+           0,
+           0,
+           0,
+           2,
            1,
+           0
+          ],
+          [
+           0,
            0,
            1,
+           0,
+           127,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           2,
+           0,
+           1,
+           0,
+           92,
+           0,
+           0,
+           0,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           2,
+           142,
+           0,
+           1,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
            0,
            110,
            0,
-           0,
-           0,
+           1,
            0
           ],
           [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           166,
-           0,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           133,
-           0,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           0,
-           143,
-           0
-          ],
-          [
-           0,
-           0,
-           0,
-           0,
            0,
            1,
            0,
            0,
            0,
-           132
+           0,
+           1,
+           1,
+           112,
+           0,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           1,
+           1,
+           0,
+           0,
+           0,
+           95,
+           0
+          ],
+          [
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
           ]
          ]
         }
@@ -1171,11 +1377,16 @@
    ],
    "source": [
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
-    "accuracy = round(acc, 4)\n",
+    "accuracy = round(acc*100, 2)\n",
     "\n",
-    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "print(f\"The accuracy is {accuracy}%\")\n",
     "\n",
-    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "f1 = f1_score(y_true=test_targets, y_pred=predictions, average=\"macro\")\n",
+    "f1 = round(f1*100, 2)\n",
+    "\n",
+    "print(f\"The F1-Score is {f1}%\")\n",
+    "\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
     "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
